Add PrintGCDetails disabled analysis